--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-title">Gece Modu</div>
+                <div class="card-title">Adım Algılayan</div>
                 <div class="card-content">
-                    <p class="card-description">Uygulamanın görünümünü koyu moda geçirir, gözlerinizi yormadan kullanmanızı sağlar.</p>
+                    <p class="card-description">Bu sistem Ai sistemiyle ayarlanıyor hata payı elbet olabilir.</p>
                     <label class="toggle-switch">
                         <input type="checkbox" id="overlay-toggle3" onclick="toggleFeature('overlay-toggle3', 'Gece Modu')">
                         <span class="slider"></span>
