Settings bölümü yapıldı Tasarım biraz ellendi

--- a/ghostinfo.html
+++ b/ghostinfo.html
@@ -32,12 +32,12 @@
     <div id="questions-container">
         <div class="question-column">
             <div class="checkbox-wrapper">
-                <input type="checkbox" id="q1" name="evidence" value="EMF Level 5" onchange="updateGhostType()">
-                <label for="q1">EMF Level 5</label>
+                <input type="checkbox" id="q1" name="evidence" value="“airball”" onchange="updateGhostType()">
+                <label for="q1">Can do “airball” ghost event</label>
             </div>
             <div class="checkbox-wrapper">
-                <input type="checkbox" id="q2" name="evidence" value="Fingerprints" onchange="updateGhostType()">
-                <label for="q2">Fingerprints</label>
+                <input type="checkbox" id="q2" name="evidence" value="favourite-room" onchange="updateGhostType()">
+                <label for="q2">Can change favourite room</label>
             </div>
             <div class="checkbox-wrapper">
                 <input type="checkbox" id="q3" name="evidence" value="Ghost Writing" onchange="updateGhostType()">
