The homepage is set

--- a/index.html
+++ b/index.html
@@ -111,38 +111,43 @@
     });
         </script>
  -->
-        <div class="plugins">
-            <div class="card">
-                <div class="card-title" data-translate="MENTAL_HEALTH_MESSAGE">Akıl Sağlığı Paneli</div>
-                <div class="card-content">
-                    <p class="card-description" data-translate="MENTAL_DESCRIPTION">Akıl sağlığınıza arabadan bakmak yerine sağ üstten bakabilmenizi sağlar.</p>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="overlay-toggle1" onclick="toggleFeature('overlay-toggle1', 'Akıl Sağlığı')">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title"data-translate="GHOST_HELPER_MESSAGE">Hayalet Yardımcısı</div>
-                <div class="card-content">
-                    <p class="card-description" data-translate="GHOST_HELPER_DESCRIPTION">Sorduğu sorulara cevap vererek size hayaleti tahmin edebilir.</p>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="overlay-toggle2" onclick="toggleFeature('overlay-toggle2', 'Hayalet Yardımcısı')">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title" data-translate="STEP_DETECTION_MESSAGE">Adım Algılayan</div>
-                <div class="card-content">
-                    <p class="card-description" data-translate="STEP_DETECTION_DESCRIPTION">Bu sistem Ai sistemiyle ayarlanıyor hata payı elbet olabilir.</p>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="overlay-toggle3" onclick="toggleFeature('overlay-toggle3', 'Gece Modu')">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-            </div>
+
+<h1 data-translate="PLUGİN_MESSAGE">Eklentiler</h1>
+<hr class="divider">
+
+<div class="plugins">
+    <div class="card box">
+        <div class="box-title" data-translate="MENTAL_HEALTH_MESSAGE">Akıl Sağlığı Paneli</div>
+        <div class="box-content">
+            <p class="box-description" data-translate="MENTAL_DESCRIPTION">Akıl sağlığınıza arabadan bakmak yerine sağ üstten bakabilmenizi sağlar.</p>
+            <label class="toggle-switch">
+                <input type="checkbox" id="overlay-toggle1" onclick="toggleFeature('overlay-toggle1', 'Akıl Sağlığı')">
+                <span class="slider"></span>
+            </label>
         </div>
+    </div>
+    <div class="card box">
+        <div class="box-title" data-translate="GHOST_HELPER_MESSAGE">Hayalet Yardımcısı</div>
+        <div class="box-content">
+            <p class="box-description" data-translate="GHOST_HELPER_DESCRIPTION">Sorduğu sorulara cevap vererek size hayaleti tahmin edebilir.</p>
+            <label class="toggle-switch">
+                <input type="checkbox" id="overlay-toggle2" onclick="toggleFeature('overlay-toggle2', 'Hayalet Yardımcısı')">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </div>
+    <div class="card box">
+        <div class="box-title" data-translate="STEP_DETECTION_MESSAGE">Adım Algılayan</div>
+        <div class="box-content">
+            <p class="box-description" data-translate="STEP_DETECTION_DESCRIPTION">Bu sistem Ai sistemiyle ayarlanıyor hata payı elbet olabilir.</p>
+            <label class="toggle-switch">
+                <input type="checkbox" id="overlay-toggle3" onclick="toggleFeature('overlay-toggle3', 'Gece Modu')">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </div>
+</div>
+
         
 
         
